# protocol

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  hardhat.config.js  package-lock.json  package.json  requirements.txt
artifacts/@openzeppelin/contracts/token/ERC20/extensions/ERC20Burnable.sol/: ERC20Burnable.dbg.json
artifacts/@openzeppelin/contracts/utils/Bytes.sol/: Bytes.dbg.json
artifacts/@openzeppelin/contracts/utils/math/Math.sol/: Math.dbg.json
artifacts/contracts/ConvictionVoting.sol/: ConvictionVoting.dbg.json  ConvictionVoting.json
artifacts/contracts/FrozenOracle.sol/: FrozenOracle.json
artifacts/contracts/GAIAProtocol.sol/: GAIAProtocol.json
artifacts/contracts/GAIAToken.sol/: GAIAToken.dbg.json  GAIAToken.json
artifacts/contracts/RewardDistributor.sol/: RewardDistributor.json
artifacts/contracts/TaskRegistry.sol/: TaskRegistry.json
artifacts/contracts/TimeLock.sol/: TimeLock.json
artifacts/contracts/ValidationPool.sol/: ValidationPool.json
artifacts/contracts/mocks/MockConvictionVoting.sol/: MockConvictionVoting.dbg.json  MockConvictionVoting.json
artifacts/contracts/mocks/MockRewardDistributor.sol/: MockRewardDistributor.json
artifacts/contracts/mocks/MockTaskRegistry.sol/: MockTaskRegistry.dbg.json  MockTaskRegistry.json
artifacts/contracts/mocks/MockValidationPool.sol/: MockValidationPool.dbg.json  MockValidationPool.json
cache/: solidity-files-cache.json
contracts/: ConvictionVoting.sol  FrozenOracle.sol  GAIAProtocol.sol  GAIAToken.sol  RewardDistributor.sol  TaskRegistry.sol  TimeLock.sol  ValidationPool.sol
contracts/mocks/: MockConvictionVoting.sol  MockRewardDistributor.sol  MockTaskRegistry.sol  MockValidationPool.sol
crates/gaia-core/crates/gaia-core/: Cargo.toml
crates/gaia-core/src/: error.rs  hash.rs  lib.rs  task.rs  types.rs
crates/gaia-dispatcher/: Cargo.toml
crates/gaia-dispatcher/src/: lib.rs  queue.rs  router.rs
crates/gaia-governance/: Cargo.toml
crates/gaia-governance/src/: conviction.rs  lib.rs  proposal.rs
crates/gaia-oracle/: Cargo.toml
crates/gaia-oracle/src/: commitment.rs  lib.rs  reference.rs
crates/gaia-token/: Cargo.toml
crates/gaia-token/src/: bme.rs  fees.rs  lib.rs  vesting.rs
crates/gaia-validator/: Cargo.toml
crates/gaia-validator/src/: freivalds.rs  lib.rs  quorum.rs
docs/: ARCHITECTURE.md  GOVERNANCE.md  TOKEN_ECONOMICS.md
node/: api_server.py  miner_node.py  validator_node.py
scripts/: deploy.js  genesis_ceremony.py
test/: ConvictionVoting.test.js  FrozenOracle.test.js  GAIAToken.test.js  RewardDistributor.test.js  TaskRegistry.test.js  TimeLock.test.js  ValidationPool.test.js
test/mocks/: MockConvictionVoting.sol  MockRewardDistributor.sol  MockTaskRegistry.sol  MockValidationPool.sol
tests/: test_api.py  test_freivalds.py  test_integration.py
