[workspace]
resolver = "2"
members = [
    "crates/gaia-core",
    "crates/gaia-oracle",
    "crates/gaia-dispatcher",
    "crates/gaia-validator",
    "crates/gaia-token",
    "crates/gaia-governance",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/gaia-compute-network/protocol"
authors = ["GAIA Protocol Contributors"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
