[package]
name = "gaia-governance"
description = "Conviction voting, COCM anti-collusion, and on-chain parameter governance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
gaia-core = { path = "../gaia-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
