[package]
name = "gaia-oracle"
description = "Frozen ML oracle: model hash commitment and scientific reference dataset verification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
gaia-core = { path = "../gaia-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
