[package]
name = "gaia-token"
description = "GAIA token economics: Burn-and-Mint Equilibrium, vesting, and fee accounting"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
gaia-core = { path = "../gaia-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
